force-app/main/default/objects/KimbleOne__BusinessUnit__c/KimbleOne__BusinessUnit__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Business Unit</label>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>