force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Business Unit</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>BusinessUnits</relationshipName>
    <type>Lookup</type>
</CustomField>