force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__CreditNoteFooter__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditNoteFooter__c</fullName>
    <label>Credit Note Footer</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>