force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__DefaultCreditNoteTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultCreditNoteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Credit Note Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__CommercialDocumentTemplate__c.KimbleOne__DocumentType__r.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>CommercialDocumentTemplateType</value>
        </filterItems>
        <filterItems>
            <field>KimbleOne__CommercialDocumentTemplate__c.KimbleOne__DocumentType__r.KimbleOne__Enum__c</field>
            <operation>equals</operation>
            <value>CreditNote</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__CommercialDocumentTemplate__c</referenceTo>
    <relationshipLabel>Business Units (Default Credit Note Template)</relationshipLabel>
    <relationshipName>BusinessUnitsCreditNote</relationshipName>
    <type>Lookup</type>
</CustomField>