force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__DefaultInvoiceExpensesTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultInvoiceExpensesTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Invoice Expenses Template</label>
    <referenceTo>KimbleOne__CommercialDocumentTemplate__c</referenceTo>
    <relationshipLabel>Business Units (Default Invoice Expenses Template)</relationshipLabel>
    <relationshipName>BusinessUnitsInvoiceExpenses</relationshipName>
    <type>Lookup</type>
</CustomField>