force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__ExpenseItemExchangeRateTolerancePct__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItemExchangeRateTolerancePct__c</fullName>
    <label>Expense Exchange Rate Tolerance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>