force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__ExpenseItemSubmissionDays__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItemSubmissionDays__c</fullName>
    <label>Expense Item Submission Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>