force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__ExpensesTaxCodeRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesTaxCodeRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expenses Tax Code Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ExpensesTaxCodeRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Business Units (Expenses Tax Code Rule)</relationshipLabel>
    <relationshipName>BusinessUnitsExpensesTaxCodeRule</relationshipName>
    <type>Lookup</type>
</CustomField>