force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__IntercompanyGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntercompanyGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intercompany Group</label>
    <referenceTo>KimbleOne__IntercompanyGroup__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>BusinessUnits</relationshipName>
    <type>Lookup</type>
</CustomField>