force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InternalAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.KimbleOne__IsInternal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>BusinessUnits</relationshipName>
    <type>Lookup</type>
</CustomField>