force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InternalInvoiceSequenceBehaviour__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalInvoiceSequenceBehaviour__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Internal Invoice Sequence Behaviour</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Business Units (Internal Invoice Sequence Behaviour Rule)</relationshipLabel>
    <relationshipName>BusinessUnitsIntInvoiceSeqBehaviourRule</relationshipName>
    <type>Lookup</type>
</CustomField>