force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoiceBankAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Bank Account</label>
    <referenceTo>KimbleOne__BankAccount__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>BusinessUnits</relationshipName>
    <type>Lookup</type>
</CustomField>