force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoiceFooter__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceFooter__c</fullName>
    <label>Invoice Footer</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>