force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicePaymentTermDays__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicePaymentTermDays__c</fullName>
    <label>Invoice Payment Term Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>