force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoiceTaxCalcOffSystem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceTaxCalcOffSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Tax Calc Off System</label>
    <type>Checkbox</type>
</CustomField>