force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoiceTaxCodeNumber__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceTaxCodeNumber__c</fullName>
    <description>The tax code number to de displayed on the Invoice e.g. VAT Number</description>
    <label>Invoice Tax Code Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>