force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingAddress__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingAddress__c</fullName>
    <label>Invoicing Address</label>
    <length>375</length>
    <type>LongTextArea</type>
</CustomField>