force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingBusinessUnitName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingBusinessUnitName__c</fullName>
    <label>Trading Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>