force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingCity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCity__c</fullName>
    <label>Invoicing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>