force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingCountry__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCountry__c</fullName>
    <label>Invoicing Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>