force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingName__c</fullName>
    <description>This field is obsolete, replaced by InvoicingBusinessUnitName.</description>
    <label>Z_Obsolete - Invoicing Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>