force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingPostalCode__c</fullName>
    <label>Invoicing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>