force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingState__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingState__c</fullName>
    <label>Invoicing State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>