force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingStreet__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingStreet__c</fullName>
    <label>Invoicing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>