force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__InvoicingStreetName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingStreetName__c</fullName>
    <label>Invoicing Street Name</label>
    <type>TextArea</type>
</CustomField>