force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__IsOperatingEntity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsOperatingEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Operating Entity</label>
    <type>Checkbox</type>
</CustomField>