force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__IsPrimaryOrganisationalEntity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsPrimaryOrganisationalEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Organisational Entity</label>
    <type>Checkbox</type>
</CustomField>