force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__IsSecondaryOrganisationalEntity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSecondaryOrganisationalEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Secondary Organisational Entity</label>
    <type>Checkbox</type>
</CustomField>