force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__IsTradingEntity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsTradingEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trading Entity</label>
    <type>Checkbox</type>
</CustomField>