force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__LogoDocumentName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LogoDocumentName__c</fullName>
    <label>Logo Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>