force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__TimePattern__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePattern__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Time Pattern</label>
    <referenceTo>KimbleOne__TimePattern__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>BusinessUnits</relationshipName>
    <type>Lookup</type>
</CustomField>