force-app/main/default/objects/KimbleOne__BusinessUnit__c/fields/KimbleOne__TimePatternRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePatternRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Time Pattern Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TimePatternRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>BusinessUnits</relationshipName>
    <type>Lookup</type>
</CustomField>