force-app/main/default/objects/KimbleOne__BusinessUnit__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__IntercompanyGroup__c</columns>
    <columns>KimbleOne__IsOperatingEntity__c</columns>
    <columns>KimbleOne__IsTradingEntity__c</columns>
    <columns>KimbleOne__InvoicingBusinessUnitName__c</columns>
    <columns>KimbleOne__TaxCodeReference__c</columns>
    <columns>KimbleOne__InvoiceBankAccount__c</columns>
    <columns>KimbleOne__TimePatternRule__c</columns>
    <columns>KimbleOne__TimePattern__c</columns>
    <columns>KimbleOne__Calendar__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>KimbleOne__InvoicingCurrencyIsoCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>